--- a/book/glossary.mdx
+++ b/book/glossary.mdx
@@ -6,9 +6,15 @@ slug: glossary
 
 # Glossary
 
+* **accessible surface area (solvent-accessible surface area).** the surface area of a biomolecule that is accessible to a solvent. typically measured in square angstroms.
+
+* **amine.**
+
 * **_apo_ structure.** the structure of an unbound protein. compare with **_holo_ structure**.
 
 * **chromatin.** the material of which the **chromosomes** of organisms other than bacteria are composed. It consists of protein, RNA, and DNA.
+
+* **chimeric protein.**
 
 * **congeneric.**
 
@@ -20,7 +26,10 @@ slug: glossary
 
 * **epigenomics states.** structural configurations of **chromatin**.
 
+* **geminal.** denoting substitutent groups or atoms that are attached to the same atom in a molecule (comes from the Latin word _gemini_, meaning &lqduo;twins.&rdquo;
+
 * **genetic polymorphism.**
+
 * **gene pool.**
 
 * **half maximal inhibitory concentration (IC50).**
@@ -29,6 +38,8 @@ slug: glossary
 * **heteroatom.**
 
 * **_holo_ structure.** the structure of a protein bound to a ligand.
+
+* **imine.**
 
 * **inihibitory constant (K<sub>i</sub>).** a lower value indicates a stronger binding affinity to the enzyme of interest (often the enzyme to inhibit).
     * sources: Wikipedia ([http](), [ipfs]()), Evidence-Based Medicine Consult ([http](https://www.ebmconsult.com/articles/inhibitory-constant-ki-drug-interactions), [ipfs](https://ipfs.io/ipfs/QmWUfBtUcVxt8GEpb6jh4cG8r4qXTER8rWgHkYcMaCWfBD)), 
@@ -40,18 +51,27 @@ slug: glossary
 
 * **miscible.** the property of two substances to _mix in all proportions_ (they fully dissolve each other at all concentrations), forming a homogeneous solution.
 
+* **motif.**
+
 * **ncRNA.**
 
-
 * **paralog.**
+
+* **profile matrix.** a matrix <M>P</M> created from a set of <M>N</M> equal-length strings where <M math="P_{ij}"/> represents the number of times symbol <M math="S_i" /> appears at position <M>j</M>.
+
+* **protein domain.** a structural and functional unit of the protein.
 
 * **pseudogene.**
 
 * **rRNA.**
 
+* **singlet.** in quantum mechanics, a **singlet** state refers to a system in which all electrons are paired.
+
 * **snRNA.**
 
 * **snoRNA.**
+
+* **surface plasmon resonance (SPR).** 
 
 * **transcription factor (TF).** a protein that controls the rate of transcription of genetic information from **DNA** to **mRNA** by binding to a specific DNA sequence.
 
@@ -60,3 +80,5 @@ slug: glossary
 * **unitig.**
 
 * **variant calling.** comparing a sample sequence with a reference sequence to determine differences, including SNPs, indels, and large scale structural variants. ([source](https://www.ebi.ac.uk/training/online/glossary/variant-calling))
+
+* **vincinal.**
