add lec2, fix typo

--- a/book/glossary.mdx
+++ b/book/glossary.mdx
@@ -22,6 +22,8 @@ slug: glossary
 
 * **covalent radius.**
 
+* **distribution coefficient (D).**
+
 * **ectopic.**
 
 * **epigenomics states.** structural configurations of **chromatin**.
@@ -56,6 +58,8 @@ slug: glossary
 * **ncRNA.**
 
 * **paralog.**
+
+* **partition coefficient (P).**
 
 * **profile matrix.** a matrix <M>P</M> created from a set of <M>N</M> equal-length strings where <M math="P_{ij}"/> represents the number of times symbol <M math="S_i" /> appears at position <M>j</M>.
 
