--- a/book/glossary.mdx
+++ b/book/glossary.mdx
@@ -1,10 +1,8 @@
 ---
-title: Glossary of chemistry terminology
+title: Glossary
 date: 2020-07-23
 slug: glossary
 ---
-
-# Glossary
 
 * **accessible surface area (solvent-accessible surface area).** the surface area of a biomolecule that is accessible to a solvent. typically measured in square angstroms.
 
@@ -28,13 +26,15 @@ slug: glossary
 
 * **epigenomics states.** structural configurations of **chromatin**.
 
-* **geminal.** denoting substitutent groups or atoms that are attached to the same atom in a molecule (comes from the Latin word _gemini_, meaning &lqduo;twins.&rdquo;
+* **geminal.** denoting substitutent groups or atoms that are attached to the same atom in a molecule (comes from the Latin word _gemini_, meaning &ldquo;twins&rdquo;).
 
 * **genetic polymorphism.**
 
 * **gene pool.**
 
-* **half maximal inhibitory concentration (IC50).**
+* **half maximal effective concentration (EC<sub>50</sub>).** the concentration of a drug, antibody, or toxicant which induces a response halfway between baseline and maximum after a specific exposure time. It is also denoted <Chem chem="\ce{[A]}_{50}" />, and accordingly is measured in molarity.
+
+* **half maximal inhibitory concentration (IC<sub>50</sub>).**
     * sources: Evidence-Based Medicine Consult ([http](https://www.ebmconsult.com/articles/inhibitory-constant-ki-drug-interactions), [ipfs](https://ipfs.io/ipfs/QmWUfBtUcVxt8GEpb6jh4cG8r4qXTER8rWgHkYcMaCWfBD))
 
 * **heteroatom.**
@@ -53,6 +53,8 @@ slug: glossary
 
 * **miscible.** the property of two substances to _mix in all proportions_ (they fully dissolve each other at all concentrations), forming a homogeneous solution.
 
+* **monooxygenase.** enzymes that incorporate one hydroxyl group into substrates.
+
 * **motif.**
 
 * **ncRNA.**
@@ -61,7 +63,9 @@ slug: glossary
 
 * **partition coefficient (P).**
 
-* **profile matrix.** a matrix <M>P</M> created from a set of <M>N</M> equal-length strings where <M math="P_{ij}"/> represents the number of times symbol <M math="S_i" /> appears at position <M>j</M>.
+* **portal vein (hepatic portal vein, HPV).**
+
+* **profile matrix.** a matrix $P$ created from a set of $N$ equal-length strings where $P_{ij}$ represents the number of times symbol $s_i$ appears at position $j$.
 
 * **protein domain.** a structural and functional unit of the protein.
 
