--- a/book/ochem/51a/overview.mdx
+++ b/book/ochem/51a/overview.mdx
@@ -4,4 +4,12 @@ date: 2020-08-01
 slug: ochem/51a
 ---
 
+<table>
+<tr>
 <Link to="/ochem/51a/lec2/">Lecture 2</Link>
+</tr>
+
+<tr>
+<Link to="/ochem/51a/lec2/">Lecture 3</Link>
+</tr>
+</table>
