--- a/book/ochem/overview.mdx
+++ b/book/ochem/overview.mdx
@@ -4,5 +4,11 @@ date: 2020-08-01
 slug: ochem
 ---
 
-<Link to="/ochem/51a/">UCI 51A Organic Chemistry</Link>
+<table>
 
+<tr>
+<td><Link to="/ochem/51a/">UCI 51A Organic Chemistry</Link></td>
+<td><a href="http://ocw.uci.edu/courses/chem_51a_organic_chemistry_nowick.html">Lecture videos</a></td>
+</tr>
+
+</table>
