--- a/book/glossary.mdx
+++ b/book/glossary.mdx
@@ -49,6 +49,8 @@ slug: glossary
 
 * **karyotype.**
 
+* **meso compound.**
+
 * **messenger RNA (mRNA).**
 
 * **miscible.** the property of two substances to _mix in all proportions_ (they fully dissolve each other at all concentrations), forming a homogeneous solution.
