--- a/book/projects.mdx
+++ b/book/projects.mdx
@@ -20,3 +20,9 @@ Each project is first introduced, describing the data gathered and historical us
 ## Protein Data Bank (PDB)
 
 ## DrugBank
+
+## Rare Genomes Project
+
+## All of Us
+
+## Count Me In Initiative
