add info on giab

--- a/book/projects.mdx
+++ b/book/projects.mdx
@@ -26,3 +26,5 @@ Each project is first introduced, describing the data gathered and historical us
 ## All of Us
 
 ## Count Me In Initiative
+
+## Genome in a Bottle
