clean up readme

--- a/book/anatomy/digestive-system.mdx
+++ b/book/anatomy/digestive-system.mdx
@@ -5,4 +5,5 @@ slug: anatomy/digestive
 ---
 
 ## Additional resources
-* Diagram of the portal vein. ([ipfs]())
+* Overview of the digestive system. ([ipfs](https://ipfs.io/ipfs/QmUa1bYzqpR1FkqJTqNVC16ss9bhAwjoSzS3sR5Wpot6ov))
+* Diagram of the portal vein. ([ipfs](https://ipfs.io/ipfs/QmZdyp9EyxrXAzU1wrFLaQmmoJsSYBgE6a3z6azLmZJDK7))
