--- a/book/anatomy/overview.mdx
+++ b/book/anatomy/overview.mdx
@@ -5,3 +5,6 @@ slug: anatomy
 ---
 
 * [Digestive system](./digestive)
+
+## Resources
+* _Diagram of human organs._ ([ipfs](https://ipfs.io/ipfs/QmbpcWpCwZfBZSGpQWQqrJykEcdkyCmmtAh8GUZfCPWgTN))
