--- a/book/ochem/solvents.mdx
+++ b/book/ochem/solvents.mdx
@@ -1,12 +1,11 @@
 ---
 title: Commonly used solvents in organic chemistry
 date: 2020-07-22
-slug: ochem-solvents
+slug: ochem/solvents
 ---
 
-# Commonly used solvents in organic chemistry
-
 ## Summary
+
 <SolventSummary />
 
 ## Tetrahydrofuran (THF)
