add more papers on single cell genomics

--- a/book/projects.mdx
+++ b/book/projects.mdx
@@ -11,7 +11,32 @@ Each project is first introduced, describing the data gathered and historical us
 
 ## The Human Genome Project
 
+## International HapMap ([http](https://www.genome.gov/10001688/international-hapmap-project))
+The **HapMap** (short for "haplotype map") is a tool that helps researchers find genes and genetic variations that affect health and disease.
+
+The HapMap has been deprecated in favor of the **1000 Genomes Project.**
+
+
 ## The Cancer Genome Atlas
+
+## Human Cell Atlas
+The mission is to create a comprehensive reference map of the types and properties of _all human cells_ (unique gene expression profiles) as a basis for understanding, diagnosing, monitoring, and treating health and disease.
+
+Another goal is create a "period table of human cells."
+
+## Terra
+
+## GATK
+
+## Global Alliance for Genomics and Health
+
+## Precision Medicine Initiative Cohort
+
+## Data Biosphere
+
+## Comprehensive Catalog of Cellular Programs
+
+## International Common Disease Alliance
 
 ## Cancer Dependency Map (DepMap)
 
@@ -23,8 +48,31 @@ Each project is first introduced, describing the data gathered and historical us
 
 ## Rare Genomes Project
 
-## All of Us
-
-## Count Me In Initiative
-
 ## Genome in a Bottle
+
+## Human Cohorts
+
+### GTEx
+
+## 1000 Genomes Project ([http](https://www.internationalgenome.org/))
+
+### ClinGen and ClinVar
+
+### ExAC
+
+### gnomAD
+
+### UK Biobank
+
+### All of Us
+
+### Count Me In Initiative
+
+### FinnGen
+
+### Vanderbilt BioVU
+
+### Psychiatric Genomics Consortium
+
+### Estonian Genome Center
+
