add genome editing papers

--- a/book/projects.mdx
+++ b/book/projects.mdx
@@ -22,7 +22,7 @@ The HapMap has been deprecated in favor of the **1000 Genomes Project.**
 ## Human Cell Atlas
 The mission is to create a comprehensive reference map of the types and properties of _all human cells_ (unique gene expression profiles) as a basis for understanding, diagnosing, monitoring, and treating health and disease.
 
-Another goal is create a "period table of human cells."
+Another goal is create a "periodic table of human cells."
 
 ## Terra
 
