--- a/notes/broad-15/bases-to-bytes.mdx
+++ b/notes/broad-15/bases-to-bytes.mdx
@@ -4,14 +4,16 @@ date: 2020-08-07
 slug: bases-to-bytes
 ---
 
-* DNA variation
-    * 20M letters between humans
-    * 60 letters between parents and children
-* Industrial manufacturing concepts create **flow** in the lab
-    * Pull process
-* Can discover _protective_ genetic variants
-* GATK created, with large cloud providers
+* DNA variation.
+    * 20M letters between humans.
+    * 60 letters between parents and children.
+* Industrial manufacturing concepts create **flow** in the lab.
+    * Pull process.
+* Can discover _protective_ genetic variants.
+* GATK created, with large cloud providers.
 * **Bring researchers to patients, and patients to researchers.**
+* Can we do what Netflix, Spotify, etc. did for genomics?
+    * Secure collaboration, without downloading data.
 
 ## References
 * _Broad@15 Talk Series: From bases to bytes._ ([youtube](https://www.youtube.com/watch?v=KH5_nPqdqxY))
